@@ -513,14 +513,20 @@ public class TimeseriesContainerKindHandler implements ContainerKindHandler {
   // ── APISIMP-CONT-NS-COLLAPSE-4: channel annotations ──────────────────────
 
   @Override
-  public Optional<Response> listChannelAnnotations(String appId, String channelShepardId) {
+  public Optional<Response> listChannelAnnotations(
+      String appId, String channelShepardId, int page, int pageSize) {
     long containerId = service.getContainerByAppId(appId).getId();
-    List<SemanticAnnotation> annotations =
-        annotatableTimeseriesService.getAnnotationsByChannelShepardId(containerId, channelShepardId);
-    List<SemanticAnnotationIO> result = annotations.stream()
-        .map(SemanticAnnotationIO::new)
-        .collect(Collectors.toList());
-    return Optional.of(Response.ok(result).build());
+    List<SemanticAnnotationIO> all =
+        annotatableTimeseriesService.getAnnotationsByChannelShepardId(containerId, channelShepardId)
+            .stream()
+            .map(SemanticAnnotationIO::new)
+            .collect(Collectors.toList());
+    int total = all.size();
+    int from = (int) Math.min((long) page * pageSize, (long) total);
+    List<SemanticAnnotationIO> slice = all.subList(from, (int) Math.min((long) from + pageSize, (long) total));
+    return Optional.of(Response.ok(new de.dlr.shepard.v2.common.io.PagedResponseIO<>(slice, total, page, pageSize))
+        .header("X-Total-Count", total)
+        .build());
   }
 
   @Override
@@ -546,14 +552,19 @@ public class TimeseriesContainerKindHandler implements ContainerKindHandler {
   // ── APISIMP-CONT-NS-COLLAPSE-4: temporal annotations ─────────────────────
 
   @Override
-  public Optional<Response> listTemporalAnnotations(String appId) {
+  public Optional<Response> listTemporalAnnotations(String appId, int page, int pageSize) {
     long containerId = service.getContainerByAppId(appId).getId();
-    List<TimeseriesAnnotationIO> rows = annotationDAO
+    List<TimeseriesAnnotationIO> all = annotationDAO
         .findByContainerId(containerId)
         .stream()
         .map(TimeseriesAnnotationIO::new)
-        .toList();
-    return Optional.of(Response.ok(rows).build());
+        .collect(Collectors.toList());
+    int total = all.size();
+    int from = (int) Math.min((long) page * pageSize, (long) total);
+    List<TimeseriesAnnotationIO> slice = all.subList(from, (int) Math.min((long) from + pageSize, (long) total));
+    return Optional.of(Response.ok(new de.dlr.shepard.v2.common.io.PagedResponseIO<>(slice, total, page, pageSize))
+        .header("X-Total-Count", total)
+        .build());
   }
 
   @Override
